Filtering values with Q and OR to the search field

--- a/contact/templates/contact/index.html
+++ b/contact/templates/contact/index.html
@@ -30,9 +30,11 @@
                             {{contact.last_name}}
                         </td>
                         <td class='table-cell'>
-                            {{contact.phone}}                        </td>
+                            {{contact.phone}}
+                        </td>
                         <td class='table-cell'>
-                            {{contact.email}}                        </td>
+                            {{contact.email}}
+                        </td>
                     </tr>           
                 {% endfor %}    
             </tbody>
