--- a/base_templates/global/partials/header.html
+++ b/base_templates/global/partials/header.html
@@ -15,7 +15,7 @@
     </nav>
 
     <div class="input">
-        <form action="" method="get">
+        <form action="{% url 'contact:search' %}" method="get">
             <input type="search" class="search-input" id="search" name="q">
         </form>
 
