--- a/contact/templates/contact/index.html
+++ b/contact/templates/contact/index.html
@@ -1,6 +1,8 @@
 {% extends 'global/base.html' %}
 
+
 {% block content %}
+{% if page_obj %}
     <div class="responsive-table">
         <table class="contacts-table">
             <caption class='caption-table'>
@@ -16,7 +18,7 @@
                 </tr>
             </thead>
             <tbody>
-                {% for contact in contacts %}
+                {% for contact in page_obj %}
                     <tr class='table-row'>
                         <td class='table-cell'>
                             <a class='table-link' href={% url 'contact:contact' contact.id %}>
@@ -40,5 +42,10 @@
             </tbody>
         </table>
     </div>
+{% else %}
+    <div class="single-contact">
+        <h1 class="single-contact-name">
+            Contact don't found.
+{% endif %}
 
 {% endblock content %}
