--- a/base_templates/global/partials/header.html
+++ b/base_templates/global/partials/header.html
@@ -16,10 +16,8 @@
 
     <div class="input">
         <form action="{% url 'contact:search' %}" method="get">
-            <input type="search" class="search-input" id="search" name="q">
+            <input type="search" class="search-input" id="search" name="q" value="{{ request.GET.q.strip }}">
         </form>
 
     </div>
 </header>
-
-
