--- a/contact/templates/contact/create.html
+++ b/contact/templates/contact/create.html
@@ -3,10 +3,10 @@
 
 {% block content %}
 <div class="form-wrapper">
-    <h2>Contact</h2>
+    <h2>{{title}}</h2>
 
     
-    <form action="" method="POST" enctype="multipart/form-data">
+    <form action="{{form_action}}" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         <div class="form-content">
             {% for field in form %}
@@ -14,6 +14,7 @@
                     <label for="{{field.id_for_label}}">{{field.label}}</label>
                     {{field}}
                     {{field.errors}}
+                    {{field.help_text}}
                 </div>
             {% endfor %}
         </div>
