--- a/contact/templates/contact/single_contact.html
+++ b/contact/templates/contact/single_contact.html
@@ -18,7 +18,12 @@
 
             <form action="{% url 'contact:delete' contact.id %}" method="POST">
                 {% csrf_token %}
-                <button class="btn btn-delete" type="submit">Delete</button>
+                {% if confirmation == 'no' %}
+                    <input type="hidden" name="confirmation" value="yes">
+                    <button class="btn btn-delete" type="submit">Sure?</button>
+                {% else %}
+                    <button class="btn btn-delete" type="submit" >Delete</button>
+                {% endif %}
             </form>
         </div>
     </div>
