--- a/contact/templates/contact/create.html
+++ b/contact/templates/contact/create.html
@@ -5,17 +5,22 @@
 <div class="form-wrapper">
     <h2>{{title}}</h2>
 
-    
+
     <form action="{{form_action}}" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         <div class="form-content">
             {% for field in form %}
+            <div class="form-group">
+                <label for="{{field.id_for_label}}">{{field.label}}</label>
+                {{field}}
+                {% comment %} {{field.errors}}
+                {{field.help_text}} {% endcomment %}
+            </div>
+            {% if field.name == 'picture' and field.value.url %}
                 <div class="form-group">
-                    <label for="{{field.id_for_label}}">{{field.label}}</label>
-                    {{field}}
-                    {{field.errors}}
-                    {{field.help_text}}
+                    <img src="{{field.value.url}}" alt="">
                 </div>
+            {% endif %}
             {% endfor %}
         </div>
 
