--- a/base_templates/global/partials/header.html
+++ b/base_templates/global/partials/header.html
@@ -5,12 +5,25 @@
 
     <nav class="menu">
         <ul class="menu-list">
-            <li class="menu-item">
-                <a class="menu-link" href="{% url 'contact:create' %}">Create</a>
-            </li>
-            <li class="menu-item">
-                <a class="menu-link" href="#">Link 2</a>
-            </li>
+            {% if user.is_authenticated %}
+                <li class="menu-item">
+                    <a class="menu-link" href="{% url 'contact:create' %}">Create</a>
+                </li>
+                <li class="menu-item">
+                    <a class="menu-link" href="{% url 'contact:user_update' %}">Update</a>
+                </li>
+                <li class="menu-item">
+                    <a class="menu-link" href="{% url 'contact:user_logout' %}">Logout</a>
+                </li>
+            {% else %}
+                <li class="menu-item">
+                    <a class="menu-link" href="{% url 'contact:user_login' %}">Login</a>
+                </li>
+                <li class="menu-item">
+                    <a class="menu-link" href="{% url 'contact:user_register' %}">Register</a>
+                </li>
+            {% endif %}
+
         </ul>
     </nav>
 
