hiding update and delete links for users without owner and contacts set to user and anonymous

--- a/base_static/global/css/style.css
+++ b/base_static/global/css/style.css
@@ -90,6 +90,10 @@ body {
     padding: var(--spacing);
 }
 
+.detail {
+    text-align: center;
+}
+
 .table-row:not(.table-row-header):hover {
     background-color: var(--clr-dark-green);
 }
