--- a/contact/templates/contact/single_contact.html
+++ b/contact/templates/contact/single_contact.html
@@ -16,21 +16,23 @@
                 <img src="{{contact.picture.url}}" alt="{{contact.first_name}} {{contact.last_name}}">
             </p>
         {% endif %}
-        <div class="update-delete">
-            <button type="button" class="btn">
-                <a class="btn-link" href="{% url 'contact:update' contact.id %}">Update</a>
-            </button>
+        {% if user == contact.owner %}
+            <div class="update-delete">
+                <button type="button" class="btn">
+                    <a class="btn-link" href="{% url 'contact:update' contact.id %}">Update</a>
+                </button>
 
-            <form action="{% url 'contact:delete' contact.id %}" method="POST">
-                {% csrf_token %}
-                {% if confirmation == 'no' %}
-                    <input type="hidden" name="confirmation" value="yes">
-                    <button class="btn btn-delete" type="submit">Sure?</button>
-                {% else %}
-                    <button class="btn btn-delete" type="submit" >Delete</button>
-                {% endif %}
-            </form>
-        </div>
+                <form action="{% url 'contact:delete' contact.id %}" method="POST">
+                    {% csrf_token %}
+                    {% if confirmation == 'no' %}
+                        <input type="hidden" name="confirmation" value="yes">
+                        <button class="btn btn-delete" type="submit">Sure?</button>
+                    {% else %}
+                        <button class="btn btn-delete" type="submit" >Delete</button>
+                    {% endif %}
+                </form>
+            </div>
+        {% endif %}
     </div>
     
 {% endblock content %}
