--- a/contact/templates/contact/user_create.html
+++ b/contact/templates/contact/user_create.html
@@ -4,7 +4,15 @@
 {% block content %}
 <div class="form-wrapper">
     <h2>Register</h2>
+    {% if user.is_authenticated %}
+        <div class="account-button">
+            <a class="button-link" href="">My Account</a>
+            <a class="button-link" href="{% url 'contact:user_login' %}">Password</a>
+        </div>
+        {% include 'contact/partials/form_user.html' %}
+    {% else %}
+        {% include 'contact/partials/form_user.html' %}
+    {% endif %}
 
-    {% include 'contact/partials/form_user.html' %}
-    
-{% endblock content %}
+
+    {% endblock content %}
