added more detail to page and adjust about the forms

--- a/base_static/global/css/style.css
+++ b/base_static/global/css/style.css
@@ -1,13 +1,26 @@
 :root {
-    --clr-light-gray: rgb(255, 255, 255);
-    --clr-dark-blue: rgb(0, 110, 255);
-    --clr-light-green: rgb(199, 250, 199);
-    --clr-dark-green: rgb(155, 192, 155);
-    --clr-darkest-green: rgb(0, 73, 0);
-    --clr-light-green-shadow: rgb(172, 194, 172);
-    --clr-green-shadow: rgba(172, 194, 172, 0.3);
-    --clr-gray: rgb(114, 126, 112);
+    --background-principal: #f7f6f6;
+    --clr-white: #f4f6f8;
+    --clr-grey: #42464D;
+    --clr-mid: #565C69;
+    --clr-weak: #7F858D;
+    --clr-blue: rgb(0, 110, 255);
+    --clr-blue-dark: rgb(61, 24, 245);
+    --clr-blue-light: rgb(52, 118, 218);
+    --clr-purple: #704de2;
+    --clr-light-purple: #a078ec;
+    --clr-lighter-purple: #cfa3f5;
+    --clr-lighest-purple: #ffceff;
+    --clr-orange-darkest: rgb(227, 82, 20);
+    --clr-orange-darker: rgb(252, 107, 15);
+    --clr-orange: rgb(255, 118, 27);
+    --clr-light-orange: rgb(255, 142, 67);
+    --clr-orange-dark: rgb(252, 119, 31);
+    --clr-orange-weakest: rgb(255, 175, 121);
+    --clr-orange-shadow: rgb(248, 145, 76);
+    --clr-ligth-orange-shadow: rgb(250, 166, 110);
     --clr-black: rgb(0, 0, 0);
+    --clr-green: rgb(49, 196, 49);
     --spacing: 1.5rem;
     --main-page-width: 120rem;
     --table-min-width: 60rem;
@@ -22,6 +35,7 @@
     --transition-medium: 600ms;
     --transition-slow: 1s;
     --border-sizing: 4px;
+
 }
 
 *,
@@ -37,7 +51,10 @@ html {
 }
 
 body {
-    background-color: var(--clr-light-green);
+    background-color: #C7CADF;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25'%3E%3Cdefs%3E%3ClinearGradient id='a' gradientUnits='userSpaceOnUse' x1='0' x2='0' y1='0' y2='100%25' gradientTransform='rotate(327,675,439)'%3E%3Cstop offset='0' stop-color='%23C7CADF'/%3E%3Cstop offset='1' stop-color='%23142BD2'/%3E%3C/linearGradient%3E%3Cpattern patternUnits='userSpaceOnUse' id='b' width='400' height='333.3' x='0' y='0' viewBox='0 0 1080 900'%3E%3Cg fill-opacity='0.09'%3E%3Cpolygon fill='%23444' points='90 150 0 300 180 300'/%3E%3Cpolygon points='90 150 180 0 0 0'/%3E%3Cpolygon fill='%23AAA' points='270 150 360 0 180 0'/%3E%3Cpolygon fill='%23DDD' points='450 150 360 300 540 300'/%3E%3Cpolygon fill='%23999' points='450 150 540 0 360 0'/%3E%3Cpolygon points='630 150 540 300 720 300'/%3E%3Cpolygon fill='%23DDD' points='630 150 720 0 540 0'/%3E%3Cpolygon fill='%23444' points='810 150 720 300 900 300'/%3E%3Cpolygon fill='%23FFF' points='810 150 900 0 720 0'/%3E%3Cpolygon fill='%23DDD' points='990 150 900 300 1080 300'/%3E%3Cpolygon fill='%23444' points='990 150 1080 0 900 0'/%3E%3Cpolygon fill='%23DDD' points='90 450 0 600 180 600'/%3E%3Cpolygon points='90 450 180 300 0 300'/%3E%3Cpolygon fill='%23666' points='270 450 180 600 360 600'/%3E%3Cpolygon fill='%23AAA' points='270 450 360 300 180 300'/%3E%3Cpolygon fill='%23DDD' points='450 450 360 600 540 600'/%3E%3Cpolygon fill='%23999' points='450 450 540 300 360 300'/%3E%3Cpolygon fill='%23999' points='630 450 540 600 720 600'/%3E%3Cpolygon fill='%23FFF' points='630 450 720 300 540 300'/%3E%3Cpolygon points='810 450 720 600 900 600'/%3E%3Cpolygon fill='%23DDD' points='810 450 900 300 720 300'/%3E%3Cpolygon fill='%23AAA' points='990 450 900 600 1080 600'/%3E%3Cpolygon fill='%23444' points='990 450 1080 300 900 300'/%3E%3Cpolygon fill='%23222' points='90 750 0 900 180 900'/%3E%3Cpolygon points='270 750 180 900 360 900'/%3E%3Cpolygon fill='%23DDD' points='270 750 360 600 180 600'/%3E%3Cpolygon points='450 750 540 600 360 600'/%3E%3Cpolygon points='630 750 540 900 720 900'/%3E%3Cpolygon fill='%23444' points='630 750 720 600 540 600'/%3E%3Cpolygon fill='%23AAA' points='810 750 720 900 900 900'/%3E%3Cpolygon fill='%23666' points='810 750 900 600 720 600'/%3E%3Cpolygon fill='%23999' points='990 750 900 900 1080 900'/%3E%3Cpolygon fill='%23999' points='180 0 90 150 270 150'/%3E%3Cpolygon fill='%23444' points='360 0 270 150 450 150'/%3E%3Cpolygon fill='%23FFF' points='540 0 450 150 630 150'/%3E%3Cpolygon points='900 0 810 150 990 150'/%3E%3Cpolygon fill='%23222' points='0 300 -90 450 90 450'/%3E%3Cpolygon fill='%23FFF' points='0 300 90 150 -90 150'/%3E%3Cpolygon fill='%23FFF' points='180 300 90 450 270 450'/%3E%3Cpolygon fill='%23666' points='180 300 270 150 90 150'/%3E%3Cpolygon fill='%23222' points='360 300 270 450 450 450'/%3E%3Cpolygon fill='%23FFF' points='360 300 450 150 270 150'/%3E%3Cpolygon fill='%23444' points='540 300 450 450 630 450'/%3E%3Cpolygon fill='%23222' points='540 300 630 150 450 150'/%3E%3Cpolygon fill='%23AAA' points='720 300 630 450 810 450'/%3E%3Cpolygon fill='%23666' points='720 300 810 150 630 150'/%3E%3Cpolygon fill='%23FFF' points='900 300 810 450 990 450'/%3E%3Cpolygon fill='%23999' points='900 300 990 150 810 150'/%3E%3Cpolygon points='0 600 -90 750 90 750'/%3E%3Cpolygon fill='%23666' points='0 600 90 450 -90 450'/%3E%3Cpolygon fill='%23AAA' points='180 600 90 750 270 750'/%3E%3Cpolygon fill='%23444' points='180 600 270 450 90 450'/%3E%3Cpolygon fill='%23444' points='360 600 270 750 450 750'/%3E%3Cpolygon fill='%23999' points='360 600 450 450 270 450'/%3E%3Cpolygon fill='%23666' points='540 600 630 450 450 450'/%3E%3Cpolygon fill='%23222' points='720 600 630 750 810 750'/%3E%3Cpolygon fill='%23FFF' points='900 600 810 750 990 750'/%3E%3Cpolygon fill='%23222' points='900 600 990 450 810 450'/%3E%3Cpolygon fill='%23DDD' points='0 900 90 750 -90 750'/%3E%3Cpolygon fill='%23444' points='180 900 270 750 90 750'/%3E%3Cpolygon fill='%23FFF' points='360 900 450 750 270 750'/%3E%3Cpolygon fill='%23AAA' points='540 900 630 750 450 750'/%3E%3Cpolygon fill='%23FFF' points='720 900 810 750 630 750'/%3E%3Cpolygon fill='%23222' points='900 900 990 750 810 750'/%3E%3Cpolygon fill='%23222' points='1080 300 990 450 1170 450'/%3E%3Cpolygon fill='%23FFF' points='1080 300 1170 150 990 150'/%3E%3Cpolygon points='1080 600 990 750 1170 750'/%3E%3Cpolygon fill='%23666' points='1080 600 1170 450 990 450'/%3E%3Cpolygon fill='%23DDD' points='1080 900 1170 750 990 750'/%3E%3C/g%3E%3C/pattern%3E%3C/defs%3E%3Crect x='0' y='0' fill='url(%23a)' width='100%25' height='100%25'/%3E%3Crect x='0' y='0' fill='url(%23b)' width='100%25' height='100%25'/%3E%3C/svg%3E");
+    background-attachment: fixed;
+    background-size: cover;
     font-size: var(--small-font-size);
     color: var(--clr-black);
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
@@ -48,10 +65,10 @@ body {
 .main-content {
     max-width: var(--main-page-width);
     margin: calc(var(--spacing) * 2) auto;
-    background: var(--clr-light-gray);
+    background: var(--background-principal);
     padding: var(--spacing);
     border-radius: var(--border-sizing);
-    box-shadow: 2px 2px 5px var(--clr-dark-green-shadow);
+    box-shadow: 2px 2px 5px var(--clr-black);
 }
 
 .responsive-table {
@@ -78,11 +95,11 @@ body {
 }
 
 .table-row:nth-child(even) {
-    background-color: var(--clr-light-green);
+    background-color: var(--clr-light-orange);
 }
 
 .table-row-header {
-    background-color: var(--clr-light-green);
+    background-color: var(--clr-light-orange);
 }
 
 .table-cell,
@@ -95,18 +112,19 @@ body {
 }
 
 .table-row:not(.table-row-header):hover {
-    background-color: var(--clr-dark-green);
+    background-color: var(--clr-orange-darker);
 }
 
 .table-link {
     text-decoration: None;
     font-weight: bold;
-    color: var(--clr-dark-blue);
+    color: var(--clr-blue-dark);
     transition: color var(--transition-fast) ease-in-out;
 }
 
 .table-link:hover {
-    color: var(--clr-black);
+    color: var(--clr-white);
+
 }
 
 .single-contact p,
@@ -119,9 +137,9 @@ h1 {
 }
 
 .header {
-    background: var(--clr-darkest-green);
+    background-color: var(--clr-blue-dark);
     padding: var(--spacing);
-    box-shadow: 0 5px 10px 2px var(--clr-light-green-shadow);
+    box-shadow: 0 5px 10px 2px var(--clr-black);
     z-index: 1;
     position: relative;
 }
@@ -132,13 +150,13 @@ h1 {
 }
 
 .header-link {
-    color: var(--clr-light-green);
+    color: var(--clr-white);
     text-decoration: none;
     transition: filter var(--transition-fast) ease-in-out;
 }
 
 .header-link:hover {
-    filter: brightness(80%)
+    filter: brightness(90%)
 }
 
 .menu {
@@ -155,14 +173,14 @@ h1 {
 .menu-link {
     display: block;
     padding: var(--spacing);
-    color: var(--clr-light-green);
+    color: var(--clr-white);
     text-decoration: none;
     transition: background-color var(--transition-fast) ease-in-out;
     border-radius: var(--border-sizing);
 }
 
 .menu-link:hover {
-    background: var(--clr-green-shadow)
+    background: var(--clr-blue-light)
 }
 
 .input {
@@ -176,11 +194,11 @@ h1 {
     width: 100%;
     max-width: 32rem;
     border-radius: var(--border-sizing);
-    border: 1px solid var(--clr-light-green)
+    border: 1px solid var(--clr-grey)
 }
 
 .search-input:focus {
-    box-shadow: 0 0 15px var(--clr-light-green);
+    box-shadow: 0 0 15px var(--clr-blue-light);
 }
 
 .pagination {
@@ -193,7 +211,7 @@ h1 {
 
 .step-links a {
     text-decoration: none;
-    color: var(--clr-dark-blue);
+    color: var(--clr-blue);
 }
 
 .form-wrapper {
@@ -233,7 +251,7 @@ select {
     font-size: var(--small-font-size);
     border-width: 2px;
     border-radius: 6px;
-    border-color: var(--clr-gray);
+    border-color: var(--clr-blue);
 }
 
 .form-group input:focus,
@@ -245,9 +263,12 @@ select:focus {
 }
 
 .btn {
-    background-color: var(--clr-dark-green);
-    color: var(--clr-light-gray);
+    background-color: var(--clr-orange-dark);
+    color: var(--clr-white);
     font-weight: bold;
+    font-family: 'Poppins', sans-serif;
+    font-size: var(--small-font-size);
+    text-transform: uppercase;
     border: none;
     padding: 1rem 2rem;
     border-radius: var(--border-sizing);
@@ -264,20 +285,21 @@ select:focus {
 
 .btn-delete {
     background: red;
+    transition: filter var(--transition-fast) ease-in-out;
 }
 
 .btn-link {
     text-decoration: none;
-    color: var(--clr-light-gray);
+    color: var(--clr-white);
 }
 
-.btn-link:hover {
-    color: var(--clr-black);
+.btn-green {
+    background-color: var(--clr-green);
 }
 
-.btn:hover {
+.btn:hover,
+.btn-delete:hover {
     filter: brightness(90%);
-    color: var(--clr-black);
 }
 
 .errorlist li {
@@ -329,4 +351,30 @@ select:focus {
 
 .nonfield li {
     color: var(--clr-black);
+}
+
+.account-button {
+    display: flex;
+    justify-content: space-between;
+    gap: var(--spacing);
+}
+
+.button-link {
+    width: 100%;
+    padding: 1rem 2rem;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-family: 'Poppins', sans-serif;
+    font-weight: bold;
+    font-size: var(--smaller-font-size);
+    color: var(--clr-orange-dark);
+    border: 1px solid var(--clr-orange-dark);
+    transition: all var(--transition-fast) ease-in-out;
+    text-align: center;
+    border-radius: var(--border-sizing);
+}
+
+.button-link:hover {
+    color: var(--clr-white);
+    background-color: var(--clr-orange-dark);
 }
