--- a/base_static/global/css/style.css
+++ b/base_static/global/css/style.css
@@ -133,7 +133,32 @@ h1 {
 }
 
 .single-contact {
-    margin: 5rem;
+    margin: 4rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.grid-contact {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.contact-img {
+    display: flex;
+    max-height: 30rem;
+    max-width: 100%;
+    justify-content: center;
+
+}
+
+.single-contact img {
+    display: flex;
+    max-width: 50%;
+    max-height: 100%;
+    border-radius: 50%;
+    border: 1px solid var(--clr-white);
+    box-shadow: 0px 2px 4px 1px var(--clr-black);
 }
 
 .header {
