--- a/contact/templates/contact/single_contact.html
+++ b/contact/templates/contact/single_contact.html
@@ -2,17 +2,18 @@
 
 {% block content %}
 <div class="single-contact">
-    <h1 class="single-contact-name">
-        {{contact.first_name}} {{contact.last_name}}
-    </h1>
-    <p><b>ID: </b>{{contact.id}}</p>
-    <p><b>E-mail: </b>{{contact.email}}</p>
-    <p><b>Phone: </b>{{contact.phone}}</p>
-    <p><b>Created Date: </b>{{contact.created_contact}}</p>
-    <p><b>Description: </b>{{contact.description}}</p>
-    <p><b>Category: </b>{{contact.category.name}}</p>
+    <div class="grid-contact">
+        <h1 class="single-contact-name">
+            {{contact.first_name}} {{contact.last_name}}
+        </h1>
+        <p><b>E-mail: </b>{{contact.email}}</p>
+        <p><b>Phone: </b>{{contact.phone}}</p>
+        <p><b>Created Date: </b>{{contact.created_contact}}</p>
+        <p><b>Description: </b>{{contact.description}}</p>
+        <p><b>Category: </b>{{contact.category.name}}</p>
+    </div>
     {% if contact.picture %}
-    <p>
+    <p class="contact-img">
         <img src="{{contact.picture.url}}" alt="{{contact.first_name}} {{contact.last_name}}">
     </p>
     {% endif %}
