--- a/base_static/global/css/style.css
+++ b/base_static/global/css/style.css
@@ -149,14 +149,13 @@ h1 {
     max-height: 30rem;
     max-width: 100%;
     justify-content: center;
-
 }
 
 .single-contact img {
     display: flex;
-    max-width: 50%;
-    max-height: 100%;
-    border-radius: 50%;
+    width: 200px;
+    height: 200px;
+    border-radius: 10%;
     border: 1px solid var(--clr-white);
     box-shadow: 0px 2px 4px 1px var(--clr-black);
 }
