--- a/contact/templates/contact/partials/form_user.html
+++ b/contact/templates/contact/partials/form_user.html
@@ -5,6 +5,9 @@
         <div class="form-group">
             <label for="{{field.id_for_label}}">{{field.label}}</label>
             {{field}}
+            {% if field.label == 'Password' or field.label == 'Current Password'%}
+            <p class="forgot-password"><a href="{% url 'password_reset' %}">Forgot?</a></p>
+            {% endif %}
             {{field.errors}}
 
             {% if field.help_text %}
@@ -15,13 +18,13 @@
         </div>
         {% endfor %}
         {% if form.non_field_errors %}
-            <div class="form-content">
-                <div class="form-group">
-                    <div class="messages error">
-                        {{ form.non_field_errors }}
-                    </div>
+        <div class="form-content">
+            <div class="form-group">
+                <div class="messages error">
+                    {{ form.non_field_errors }}
                 </div>
             </div>
+        </div>
         {% endif %}
     </div>
 
